[package]
name = "mdbook-bom"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook = { version = "0.4", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
regex = "1.0"
